--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1072,11 +1072,11 @@
     </div>
     <div class='cube_panel'>
         <div class="left-panel2">
+            <div class="turn-dice-labels">
+                <label for="turn-select-btn">Чей ход?</label>
+                <label>На кубиках:</label>
+            </div>
             <div class="turn-dice-block">
-                <div class="turn-dice-labels">
-                    <label for="turn-select-btn">Чей ход?</label>
-                    <label>На кубиках:</label>
-                </div>
                 <div class="turn-dice-content">
                     <div class="turn-dice-section">
                         <div class="turn-dice-controls">
