--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -506,8 +506,8 @@
         }
 
         .checker-toggle-btn {
-            width: 1.5em;
-            height: 1.5em;
+            width: 3em;
+            height: 3em;
             border-radius: 50%;
             border: 0.125em solid #222;
             cursor: pointer;
@@ -749,7 +749,6 @@
             flex-direction: row;
             justify-content: space-around;
             align-items: center;
-            margin-bottom: 0.3rem;
         }
 
         .turn-dice-labels label {
@@ -799,8 +798,8 @@
         }
 
         .dice-selector-button {
-            width: 60px;
-            height: 60px;
+            width: 40px;
+            height: 40px;
             border: 2px solid #555;
             border-radius: 8px;
             background-color: #2d2d2d;
